# speedtest-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  configs.toml  docker-compose.override.sample.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build-publish-release.yml  docker-publish-os.yml  docker-publish.yml  rust-check.yml
assets/: index.html  servers_list.js  speedtest_worker.js
setup/: setup_sc_win.bat  setup_systemd.sh
setup/debian/: service  speedtest_rs.service  speedtest_rs.socket
setup/debian/scripts/: postinst.sh  prerm.sh
src/: cmd.rs  main.rs
src/config/: mod.rs  time.rs
src/database/: memory.rs  mod.rs  mysql.rs  none.rs  postgres.rs  sqlite.rs
src/http/: cookie.rs  http_client.rs  http_server.rs  mod.rs  request.rs  response.rs  routes.rs  tcp_socket.rs  tls.rs
src/ip/: ip_info.rs  mod.rs  updater.rs
src/ip/mmdb/: mmdb_reader.rs  mmdb_record.rs  mod.rs
src/results/: mod.rs  stats.rs  telemetry.rs
