[package]
name = "librespeed-rs"
version = "1.3.7"
edition = "2021"
authors = ["Sudo Dios"]
description = "Rust backend for LibreSpeed"

[dependencies]
#async net
tokio = {version = "1.43.0", features = ["net","io-util","rt","macros","rt-multi-thread"]}
tokio-rustls = {version = "0.26.1", features = ["tls12","ring"], default-features = false}
webpki-roots = "0.26.7"
rustls-pemfile = "2.2.0"
socket2 = "0.5.8"
listenfd = "1.0.2"
#ip
maxminddb = "0.24.0"
#image processing
imageproc = "0.25.0"
ab_glyph = "0.2.28"
#serializer
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
#databases
uuid = { version = "1.12.1", features = ["v4"] }
chrono = "0.4.39"
mysql = { version = "26.0.0",default-features = false }
postgres = "0.19.9"
rusqlite = { version = "0.33.0",features = ["bundled"] }
#conf
clap = { version = "4.5.27",features = ["std","color","help","usage"],default-features = false }
toml = "0.8.19"
#web
sha2 = "0.10.8"
handlebars = "6.3.0"
#logging
env_logger = { version = "0.11.6",default-features = false,features = ["auto-color","humantime"] }
log = "0.4.25"
indicatif = "0.17.9"
#assets
include_dir = "0.7.4"
case_insensitive_hashmap = "1.0.1"

[package.metadata.deb]
maintainer-scripts = "setup/debian/scripts/"
systemd-units = { enable = false }
revision = ""
assets = [
    ["target/release/librespeed-rs","/usr/bin/librespeed-rs","755"],
    ["assets/*","/var/lib/librespeed-rs/assets","644"],
    ["configs.toml","/var/lib/librespeed-rs/configs.toml","644"],
    ["country_asn.mmdb","/var/lib/librespeed-rs/country_asn.mmdb","644"],
    ["setup/debian/speedtest_rs.service","/lib/systemd/system/speedtest_rs.service","644"],
    ["setup/debian/speedtest_rs.socket","/lib/systemd/system/speedtest_rs.socket","644"]
]

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
lto = true
strip = true
