[package]
name = "librespeed-rs"
version = "1.3.8"
edition = "2021"
authors = ["Sudo Dios"]
description = "Rust backend for LibreSpeed"

[features]
default = ["sqlite","mysql","postgres"]

sqlite = ["dep:rusqlite"]
mysql = ["dep:mysql"]
postgres = ["dep:postgres"]

[dependencies]
#async net
tokio = {version = "1.48.0", features = ["net","io-util","rt","macros","rt-multi-thread","sync","signal"]}
tokio-rustls = {version = "0.26.4", features = ["tls12","ring"], default-features = false}
webpki-roots = "1.0.3"
rustls-pemfile = "2.2.0"
socket2 = "0.6.1"
listenfd = "1.0.2"
futures = "0.3.31"
#ip
maxminddb = "0.26.0"
#image processing
imageproc = "0.25.0"
ab_glyph = "0.2.32"
#serializer
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
#databases
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
mysql = { version = "26.0.1",default-features = false, optional = true }
postgres = { version = "0.19.12", optional = true }
rusqlite = { version = "0.37.0",features = ["bundled"], optional = true }
#conf
clap = { version = "4.5.49",features = ["std","color","help","usage"],default-features = false }
toml = "0.9.8"
#web
sha2 = "0.10.8"
handlebars = "6.3.2"
#logging
env_logger = { version = "0.11.8",default-features = false,features = ["auto-color","humantime"] }
log = "0.4.28"
indicatif = "0.18.0"
#assets
include_dir = "0.7.4"
case_insensitive_hashmap = "1.0.1"

[package.metadata.deb]
maintainer-scripts = "setup/debian/scripts/"
systemd-units = { enable = false }
revision = ""
assets = [
    ["target/release/librespeed-rs","/usr/bin/librespeed-rs","755"],
    ["assets/*","/var/lib/librespeed-rs/assets","644"],
    ["configs.toml","/var/lib/librespeed-rs/configs.toml","644"],
    ["country_asn.mmdb","/var/lib/librespeed-rs/country_asn.mmdb","644"],
    ["setup/debian/speedtest_rs.service","/lib/systemd/system/speedtest_rs.service","644"],
    ["setup/debian/speedtest_rs.socket","/lib/systemd/system/speedtest_rs.socket","644"]
]

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
lto = true
strip = true
